# EE198_EESeniorDesignProject_SJSU

./: .gitignore  Filename  README.md  sim_run  test_poly  test_tone
docs/: TaskDistribution.md
firmware/: Makefile  platformio.ini
firmware/src/: main.cpp  midi_driver.c  midi_driver.cpp  midi_driver.h  qwerty_driver.c  qwerty_driver.h  usb_handler.c  usb_handler.h
midi_sound_engine/: ai_predict.py  engine.py  gui.py  mac_keyboard_listener.py  midi_utils.py  monitor_and_launch.py  pico_autorun.sh  pico_listener.py  serial_midi_adapter.py  setup_pico_autorun.sh  synth_menu.py  test_play.py  unified_listener.py
midi_sound_engine/clean_synth_env/: pyvenv.cfg
qwerty_midi_pico/: CMakeLists.txt  config.h  main.c  tusb_config.h  usb_descriptors.c
qwerty_midi_pico/drivers/: gpio_driver.c  gpio_driver.h
qwerty_midi_pico/sim/: gpio_scanner.c  sim_hardware.h  sim_main.c  test_tone.c
software/api/: api_server.py  midi_api.py  qwerty_api.py
